--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header : Hello
 <h1 class='homepage'> Hello. I'm <a href="/about.html">Jonathan</a>. Thanks for dropping by.</h1>
 <h2 class='index'>
 The <a href="/music.html">music</a> page has music and art projects; the <a href="/writing.html">media</a> page has broadcasting, print and other publications;  the <a href="/tech.html">tech</a> and <a href="{{lyrics[0].url}}">lyrics</a> pages have... you get the picture.</h2>
-<h2 class='index'> If you want to search by <a href="//world.html">location</a> or by <a href="/categories.html">topic</a>, you can do that too.</h2> 
+<h2 class='index'> If you want to search by <a href="/world.html">location</a> or by <a href="/categories.html">topic</a>, you can do that too.</h2> 
 <h2 class='index'>And if you don't want to browse at all, you can watch my YouTube favourites below - same idea: more succinct. </h2>
 <br>
 <br>
