--- a/writing.html
+++ b/writing.html
@@ -25,6 +25,7 @@ weight: "AD"
 
 </div>
 
+
 <!-- list of tags by topic -->
 
   <!-- <div class='clear'>
@@ -217,8 +218,5 @@ weight: "AD"
 
   {% endfor %}
 
-
-  <hr class='nomargin thick'>
-  <hr class='nomargin thick'>
-
 </div>
+{% include summary_table %}
