--- a/categories.html
+++ b/categories.html
@@ -7,7 +7,6 @@ weight: "CB"
 ---
 {% include JB/setup %}
 
-
 <!-- list of tags by location -->
 <div class='allindextags'>
 
@@ -17,40 +16,29 @@ weight: "CB"
 		<ul class="tag_box inline">
 			{% assign categories_list = (site.categories | sort ) %}
 		   {% include JB/categories_list %}
-
 		</ul>
 	</div>
-
 	<!-- list of tags by topic -->
 	<div class="index">
 		<span class='catheader'>topic</span>
 		<ul class="tag_box inline">
-
 			{% assign topicArray = site.topicarray %}
 			 {% for post in site.posts %} 
 			 	{% if (post.topic | size) > 0 %}
 					 {% for tag in post.topic %}
 					 	{% unless topicArray contains tag %}
-
 					 		{% assign tag = tag | replace: ' ', '' %}
 						 	{% assign topicArray = topicArray | push: tag %}
-
 						{% endunless %}
 					 {% endfor %}
 				 {% endif %}
 			{% endfor %}
-
 			{% assign sortedTopics = (topicArray | sort )%}
-
 			{% for tag in sortedTopics %}
 				<li>
-					 		<a href="{{ BASE_PATH }}#{{tag}}-ref">
-					 		{{tag}}
-					 		</a>
+			 		<a href="{{ BASE_PATH }}#{{tag}}-ref">{{tag}}</a>
 				</li>
-
 			{% endfor %}
-
 		</ul>
 	</div>
 
@@ -66,10 +54,8 @@ weight: "CB"
 				 	{% unless genreArray contains tag %}
 					 	{% assign genreArray = genreArray | push: tag %}
 					{% endunless %}
-
 				 {% endfor %}
 			{% endfor %}
-
 			 {% for post in site.reviews %} 
 			 	{% for genre in post.genre %}
 				 {% assign tag = genre %}
@@ -78,18 +64,11 @@ weight: "CB"
 					{% endunless %}
 				{% endfor %}
 			{% endfor %}
-
 			{% assign sortedGenres = (genreArray | sort )%}
-
 			{% for tag in sortedGenres %}
-				<li>
-					 		<a href="{{ BASE_PATH }}#{{tag}}-ref">
-					 		{{tag}}
-					 		</a>
+				<li><a href="{{ BASE_PATH }}#{{tag}}-ref">{{tag}}</a>
 				</li>
-
 			{% endfor %}
-
 		</ul>
 	</div>
 
@@ -105,7 +84,6 @@ weight: "CB"
 				 	{% unless artistArray contains tag %}
 					 	{% assign artistArray = artistArray | push: tag %}
 					{% endunless %}
-
 				 {% endfor %}
 			{% endfor %}
 			 {% for post in site.reviews %} 
@@ -114,50 +92,30 @@ weight: "CB"
 					 	{% assign artistArray = artistArray | push: tag %}
 					{% endunless %}
 			{% endfor %}
-
 			{% assign sortedArtists = (artistArray | sort) %}
-
 			 {% for tag in sortedArtists %} 
-			
 			 	 <li>
-
 					<a href="{{ BASE_PATH }}#{{ tag }}-ref">{{tag}} </a>
-
 			    </li>
-
 			 {% endfor %}
 		</ul>
 	</div>
 </div>
-
-
-
 <!-- <!-- <!-- list of tags by source -->
 <div class="index">source
 	<ul class="tag_box source_box inline">
 	 {% assign source_list = (site.posts | sort:"source" | group_by:"source" ) %}
-
 	 {% for source in source_list %} 
-
 		 {% if (source.items[0].source | size ) > 0 %}
-
-		 	<li>
-		 	 		<a href="{{ BASE_PATH }}#{{ source.items[0].source | replace: " ",'' }}-ref">
-		    		{{ source.items[0].source }} 
-		    		</a>
+		 	<li><a href="{{ BASE_PATH }}#{{ source.items[0].source | replace: " ",'' }}-ref">
+{{ source.items[0].source }} </a>
 		    </li>
-
 		 {% endif %}
-
 	 {% endfor %}
-
 	</ul>
 </div> 
   
 <!-- <a href="{{ BASE_PATH }}#{{ location }}-ref">{{location}} </a>
-
-
-<!--  -->
 <!-- headings and links to article by category -->
 
 <div class='allindexstories'>
@@ -168,22 +126,16 @@ weight: "CB"
 	  <ul class='icon'>
 	    {% assign pages_list = (category[1] | sort: 'title') %}  
 	    {% include JB/pages_list %}
-
 	    {% if category[0] == "reviews" %}
 	    {% assign allreviews = (site.reviews | sort: "artist") %}
 	    	 {% for review in allreviews %}
 	    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
 	    	{% endfor %}
 	    {% endif %}
-
 	  </ul>
 	{% endfor %}
-
 	<hr>
-	<!--  -->
 
-
-	<!--  -->
 	<!-- headings and links to article by topic -->
 	<h1>Topic</h1>
 	{% for item in sortedTopics  %} 
@@ -209,7 +161,6 @@ weight: "CB"
 	    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
 	    	{% endif %}
 	    {% endfor %}
-
 	  </ul>
 	{% endfor %}
 	<hr>
@@ -221,14 +172,11 @@ weight: "CB"
 	   <ul class='icon'>
 	    {% assign pages_list = site.tags[artist]  %} 
 	    {% include JB/pages_list %}
-
 	     {% for review in site.reviews %}
 	    	{% if review.artist == artist %}
 	    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
 	    	{% endif %}
 	    {% endfor %}
-
-	    
 	  </ul>
 	{% endfor %}
 	<hr>
@@ -236,17 +184,14 @@ weight: "CB"
 	<!-- headings and links to article by source -->
 	<h1>Source</h1>
 	{% for source in source_list  %} 
-
 		{% if (source.items[0].source | size ) > 0 %}
-
 		  <h2 id="{{ source.items[0].source | replace: " ",''}}-ref">{{ source.items[0].source | join: "/" }}</h2>
 		  <ul class='icon'>
 		    {% assign pages_list = source.items  %}  
 		    {% include JB/pages_list %}
 		  </ul>
-
 		{% endif %}
-		
 	{% endfor %}
-
 </div>
+
+{% include summary_table %}
