added form obscuring

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: about
-title: About
-header: About
-group: navigation
+title: About Me
+header: About Me
+group: foot
 weight: "DE"
 ---
 {% include JB/setup %}
