--- a/categories.html
+++ b/categories.html
@@ -6,44 +6,35 @@ group: navigation
 weight: "CB"
 ---
 {% include JB/setup %}
+<div class='tagpage-buttons clear'>
+	<h2>Filter By:</h2>
+</div>
+<!-- list of tag filters -->
+<div class='tagpage-buttons clear'>
+	<span id='tagpage_all_button'>All</span>
+</div>
+<div class='tagpage-buttons clear all-buttons'>
+	<span id='tagpage-categories-button'>Category</span>
+	<span id='tagpage-genres-button'>Musical Genre</span>
+	<span id='tagpage-topics-button'>Topic</span>
+	<span id='tagpage-artists-button'>Artist</span>
+	<span id='tagpage-sources-button'>Source</span>
+</div>
 
-<!-- list of tags by location -->
+
+<!-- list of tags -->
 <div class='allindextags'>
-
 	<!-- list of tags by category -->
-	<div class="index">
+	<div class="index clear" id='tagpage-categories-list'>
 		<span class='catheader'>category</span>
 		<ul class="tag_box inline">
 			{% assign categories_list = (site.categories | sort ) %}
 		   {% include JB/categories_list %}
 		</ul>
 	</div>
-	<!-- list of tags by topic -->
-	<div class="index">
-		<span class='catheader'>topic</span>
-		<ul class="tag_box inline">
-			{% assign topicArray = site.topicarray %}
-			 {% for post in site.posts %} 
-			 	{% if (post.topic | size) > 0 %}
-					 {% for tag in post.topic %}
-					 	{% unless topicArray contains tag %}
-					 		{% assign tag = tag | replace: ' ', '' %}
-						 	{% assign topicArray = topicArray | push: tag %}
-						{% endunless %}
-					 {% endfor %}
-				 {% endif %}
-			{% endfor %}
-			{% assign sortedTopics = (topicArray | sort )%}
-			{% for tag in sortedTopics %}
-				<li>
-			 		<a href="{{ BASE_PATH }}#{{tag}}-ref">{{tag}}</a>
-				</li>
-			{% endfor %}
-		</ul>
-	</div>
 
 	<!-- list of tags by genre -->
-	<div class="index">
+	<div class="index clear" id='tagpage-genres-list'>
 		<span class='catheader'>genre</span>
 		<ul class="tag_box inline">
 
@@ -72,8 +63,32 @@ weight: "CB"
 		</ul>
 	</div>
 
+	<!-- list of tags by topic -->
+	<div class="index clear" id='tagpage-topics-list'>
+		<span class='catheader'>topic</span>
+		<ul class="tag_box inline">
+			{% assign topicArray = site.topicarray %}
+			 {% for post in site.posts %} 
+			 	{% if (post.topic | size) > 0 %}
+					 {% for tag in post.topic %}
+					 	{% unless topicArray contains tag %}
+					 		{% assign tag = tag | replace: ' ', '' %}
+						 	{% assign topicArray = topicArray | push: tag %}
+						{% endunless %}
+					 {% endfor %}
+				 {% endif %}
+			{% endfor %}
+			{% assign sortedTopics = (topicArray | sort )%}
+			{% for tag in sortedTopics %}
+				<li>
+			 		<a href="{{ BASE_PATH }}#{{tag}}-ref">{{tag}}</a>
+				</li>
+			{% endfor %}
+		</ul>
+	</div>
+
 	<!-- list of tags by artist -->
-	<div class="index">
+	<div class="index clear" id='tagpage-artists-list'>
 		<span class='catheader'>artist</span>
 		<ul class="tag_box inline">
 
@@ -100,98 +115,112 @@ weight: "CB"
 			 {% endfor %}
 		</ul>
 	</div>
-</div>
-<!-- <!-- <!-- list of tags by source -->
-<div class="index">source
-	<ul class="tag_box source_box inline">
-	 {% assign source_list = (site.posts | sort:"source" | group_by:"source" ) %}
-	 {% for source in source_list %} 
-		 {% if (source.items[0].source | size ) > 0 %}
-		 	<li><a href="{{ BASE_PATH }}#{{ source.items[0].source | replace: " ",'' }}-ref">
-{{ source.items[0].source }} </a>
-		    </li>
-		 {% endif %}
-	 {% endfor %}
-	</ul>
+
+	<!-- <!-- <!-- list of tags by source -->
+	<div class="index clear" id='tagpage-sources-list'>
+		<span class='catheader'>source</span>
+		<ul class="tag_box source_box inline">
+		 {% assign source_list = (site.posts | sort:"source" | group_by:"source" ) %}
+		 {% for source in source_list %} 
+			 {% if (source.items[0].source | size ) > 0 %}
+			 	<li><a href="{{ BASE_PATH }}#{{ source.items[0].source | replace: " ",'' }}-ref">
+			 		{{ source.items[0].source }} </a>
+			    </li>
+			 {% endif %}
+		 {% endfor %}
+		</ul>
+	</div>
 </div> 
   
 <!-- <a href="{{ BASE_PATH }}#{{ location }}-ref">{{location}} </a>
 <!-- headings and links to article by category -->
 
 <div class='allindexstories'>
-	<h1>Category</h1>
-	{% assign sorted_categories_list = (site.categories | sort ) %}
-	{% for category in sorted_categories_list %} 
-	  <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
-	  <ul class='icon'>
-	    {% assign pages_list = (category[1] | sort: 'title') %}  
-	    {% include JB/pages_list %}
-	    {% if category[0] == "reviews" %}
-	    {% assign allreviews = (site.reviews | sort: "artist") %}
-	    	 {% for review in allreviews %}
-	    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
-	    	{% endfor %}
-	    {% endif %}
-	  </ul>
-	{% endfor %}
-	<hr>
+	<div id='tagpage-categories'>
+		<h1 class='tagpageh1'>Category</h1>
+		{% assign sorted_categories_list = (site.categories | sort ) %}
+		{% for category in sorted_categories_list %} 
+		  <h2 id="{{ category[0] }}-ref">{{ category[0] | join: "/" }}</h2>
+		  <ul class='icon'>
+		    {% assign pages_list = (category[1] | sort: 'title') %}  
+		    {% include JB/pages_list %}
+		    {% if category[0] == "reviews" %}
+		    {% assign allreviews = (site.reviews | sort: "artist") %}
+		    	 {% for review in allreviews %}
+		    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
+		    	{% endfor %}
+		    {% endif %}
+		  </ul>
+		{% endfor %}
+		<hr>
+	</div>
+
+	<!-- headings and links to article by genre -->
+	<div id='tagpage-genres'>
+		<h1 class='tagpageh1'>Music Genre</h1>
+		{% for genre in sortedGenres  %} 
+		  <h2 id="{{genre}}-ref">{{genre}}</h2>
+		   <ul class='icon'>
+		    {% assign pages_list = site.tags[genre]  %}  
+		    {% include JB/pages_list %}
+
+		    {% for review in site.reviews %}
+		    	{% if review.genre contains genre %}
+		    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
+		    	{% endif %}
+		    {% endfor %}
+		  </ul>
+		{% endfor %}
+		<hr>
+	</div>
 
 	<!-- headings and links to article by topic -->
-	<h1>Topic</h1>
-	{% for item in sortedTopics  %} 
-	  <h2 id="{{item}}-ref">{{item}}</h2>
-	   <ul class='icon'>
-	    {% assign pages_list = site.tags[item]  %}  
-	    {% include JB/pages_list %}
-	  </ul>
-	{% endfor %}
-
-	<hr>
-	<!--  -->
-	<!-- headings and links to article by genre -->
-	<h1>Music Genre</h1>
-	{% for genre in sortedGenres  %} 
-	  <h2 id="{{genre}}-ref">{{genre}}</h2>
-	   <ul class='icon'>
-	    {% assign pages_list = site.tags[genre]  %}  
-	    {% include JB/pages_list %}
-
-	    {% for review in site.reviews %}
-	    	{% if review.genre contains genre %}
-	    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
-	    	{% endif %}
-	    {% endfor %}
-	  </ul>
-	{% endfor %}
-	<hr>
-	<!--  -->
-	<!-- headings and links to article by artist -->
-	<h1>Artist</h1>
-	{% for artist in sortedArtists  %} 
-	  <h2 id="{{artist}}-ref">{{artist}}</h2>
-	   <ul class='icon'>
-	    {% assign pages_list = site.tags[artist]  %} 
-	    {% include JB/pages_list %}
-	     {% for review in site.reviews %}
-	    	{% if review.artist == artist %}
-	    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
-	    	{% endif %}
-	    {% endfor %}
-	  </ul>
-	{% endfor %}
-	<hr>
-
-	<!-- headings and links to article by source -->
-	<h1>Source</h1>
-	{% for source in source_list  %} 
-		{% if (source.items[0].source | size ) > 0 %}
-		  <h2 id="{{ source.items[0].source | replace: " ",''}}-ref">{{ source.items[0].source | join: "/" }}</h2>
-		  <ul class='icon'>
-		    {% assign pages_list = source.items  %}  
+	<div id='tagpage-topics'>
+		<h1 class='tagpageh1'>Topic</h1>
+		{% for item in sortedTopics  %} 
+		  <h2 id="{{item}}-ref">{{item}}</h2>
+		   <ul class='icon'>
+		    {% assign pages_list = site.tags[item]  %}  
 		    {% include JB/pages_list %}
 		  </ul>
-		{% endif %}
-	{% endfor %}
+		{% endfor %}
+
+		<hr>
+	</div>
+	<!--  -->
+	
+	<!--  -->
+	<!-- headings and links to article by artist -->
+	<div id='tagpage-artists'>
+		<h1 class='tagpageh1'>Artist</h1>
+		{% for artist in sortedArtists  %} 
+		  <h2 id="{{artist}}-ref">{{artist}}</h2>
+		   <ul class='icon'>
+		    {% assign pages_list = site.tags[artist]  %} 
+		    {% include JB/pages_list %}
+		     {% for review in site.reviews %}
+		    	{% if review.artist == artist %}
+		    			<li class="lplink iconic"><a href="{{review.url}}">{{review.title}}</a></li>
+		    	{% endif %}
+		    {% endfor %}
+		  </ul>
+		{% endfor %}
+		<hr>
+	</div>
+
+	<!-- headings and links to article by source -->
+	<div id='tagpage-sources'>
+		<h1 class='tagpageh1'>Source</h1>
+		{% for source in source_list  %} 
+			{% if (source.items[0].source | size ) > 0 %}
+			  <h2 id="{{ source.items[0].source | replace: " ",''}}-ref">{{ source.items[0].source | join: "/" }}</h2>
+			  <ul class='icon'>
+			    {% assign pages_list = source.items  %}  
+			    {% include JB/pages_list %}
+			  </ul>
+			{% endif %}
+		{% endfor %}
+	</div>
 </div>
 
 {% include summary_table %}
