added summary to footer and changed sitemap

--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@ weight: "AC"
 {% include JB/setup %}
 <subtitle>{{page.title}}</subtitle>
 
-	<ul class="tag_box inline">
+	<ul class="tag_box inline no_border">
 
 		{% assign techArray = site.techarray %}
 
@@ -72,4 +72,4 @@ weight: "AC"
 {% endfor %}
 </div>
 
-{% include summary_table %}
+
