--- a/tech.html
+++ b/tech.html
@@ -10,7 +10,7 @@ icon: "jonascii.png"
 
 
 <subtitle>{{page.title}}</subtitle>
-<ul class="tag_box inline">
+<ul class="tag_box inline no_border">
 
 		{% assign techArray = site.techarray %}
 
@@ -78,4 +78,3 @@ icon: "jonascii.png"
 {% endfor %}
 </div>
 
-{% include summary_table %}
