--- a/writing.html
+++ b/writing.html
@@ -9,7 +9,7 @@ weight: "AD"
 <subtitle>{{page.title}}</subtitle>
 <div class="index">
 
-	<ul class="tag_box inline">
+	<ul class="tag_box inline no_border">
 
     <li><a href="#print">print</a></li>
     <li><a href="#radio">radio</a></li>
@@ -219,4 +219,3 @@ weight: "AD"
   {% endfor %}
 
 </div>
-{% include summary_table %}
