--- a/writing.html
+++ b/writing.html
@@ -7,9 +7,9 @@ weight: "AD"
 ---
 {% include JB/setup %}
 <subtitle>{{page.title}}</subtitle>
-<div class="index">
+<div class="index no_border">
 
-	<ul class="tag_box inline no_border">
+	<ul class="tag_box inline">
 
     <li><a href="#print">print</a></li>
     <li><a href="#radio">radio</a></li>
