--- a/subscribe.html
+++ b/subscribe.html
@@ -20,7 +20,7 @@ weight: "DE"
 	<label for="mce-EMAIL">Email Address </label>
 	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
 </div>
-<p><a href="http://us12.campaign-archive2.com/home/?u=01d6aadcfdf051e4a7af535cc&id=abe9c29ac2" title="View previous campaigns">View previous campaigns.</a></p>
+<p><a href="http://us12.campaign-archive2.com/home/?u=01d6aadcfdf051e4a7af535cc&id=abe9c29ac2" title="View previous campaigns">View previous mailouts</a></p>
 	<div id="mce-responses" class="clear">
 		<div class="response" id="mce-error-response" style="display:none"></div>
 		<div class="response" id="mce-success-response" style="display:none"></div>
