--- a/writing.html
+++ b/writing.html
@@ -101,10 +101,10 @@ weight: "AD"
 
     <a  href={{post.url}}>
 
-          <span id="{{post.category}}" class="all_page_tagline category"> {{post.category}}</span>
+     <!--      <span id="{{post.category}}" class="all_page_tagline category"> {{post.category}}</span> -->
           
-        <br>
-        <img class="allnote" src="{{IMAGE_CROP_PATH}}/{{post.image}}"/>
+      <!--   <br> -->
+        <img class="allnote first" src="{{IMAGE_CROP_PATH}}/{{post.image}}"/>
 
         <div class="index-title">
           <h3>  
