--- a/_posts/music/2015-10-10-lyrics.html
+++ b/_posts/music/2015-10-10-lyrics.html
@@ -1,9 +1,9 @@
 ---
 layout: music
-category: "music"
-year: 2001-
+category: "songs"
+year: 2000-
 title: "Song Lyrics"
-description: "Selected song lyrics from bands, collaborations and theatre"
+description: "Selected song lyrics from bands, artists and theatre"
 image: "pencil.jpg"
 area: songwriting
 genre: ['lyrics']
@@ -11,36 +11,48 @@ location: [UK]
 tags: [lyrics, UK]
 ---
 {% include JB/setup %}
-{% include JB/setup %}
+<subtitle>{{page.description}}</subtitle>		
 
-{% assign songs = (site.lyrics | sort: 'group') %}
-{% assign songs = (songs | sort: 'album') %}
+{% assign songsarray = (site.lyrics | sort: 'artist' | group_by: 'year') %}
 {% assign prevalbum = '' %}
-{% assign prevband = '' %}
+{% assign prevband = '' %} 
+{% assign prevyear = '' %}
 
 <ul>
-{% for song in songs reversed %}
 
-	{% if prevband != song.group %}
-		</ul>
-		<h2 class='band'>{{song.group}}</h2>
-		<ul class='album'>
-	{% endif %}
-		
-	{% if prevalbum != song.album %}
-		</ul>
-		<h3 class='album'>{{song.album}}</h3>
-		<ul class='album'>
-	{% endif %}
+{% for yeararray in songsarray %}
 
-      <li>
-	<a href="{{song.url}}">{{ song.title }}</a>
-      </li>
+	{% assign dataArr = yeararray.items %}
+	{% for song in dataArr %}
 
-      {% assign prevband = song.group %}
-      {% assign prevalbum = song.album %}
+		{% if prevyear != song.year %}
+				</ul>
+				<h2 class='band'>{{song.year}}</h2>
+				<h2 class='band indented'>{{song.artist}}</h2>
+				<ul class='album indented'>
+
+		{% elsif prevband != song.artist %}
+			</ul>
+			<h2 class='band indented'>{{song.artist}}</h2>
+			<ul class='album indented'>
+		{% endif %}
+			
+		{% if prevalbum != song.album %}
+			</ul>
+			<h3 class='album indented'>{{song.album}}</h3>
+			<ul class='album indented'>
+		{% endif %}
+
+	      <li>
+		<a href="{{song.url}}">{{ song.title }}</a>
+	      </li>
+
+	      {% assign prevband = song.artist %}
+	      {% assign prevalbum = song.album %}
+	      {% assign prevyear = song.year %}
 
 
+	{% endfor %}
 {% endfor %}
 
 </ul>
