about.html update

--- a/about.html
+++ b/about.html
@@ -106,13 +106,10 @@ href="tufte.css"/&gt;</pre>
 <br>
 
 {% assign codepage = (site.categories.tech | where: 'title', 'Me and Coding') %}
-
+{% include sideimage img="listentowiki.jpg" text='Geeks do beautiful things. Like <a href="http://listen.hatnote.com/">this.</a>' %}
 <p>
 I taught myself to code because I love geekery and it seemed like a perfect excuse.
 Also I had just founded a startup and I realised that London was a terrible place  <a href="{{codepage[0].url}}">to look for programmers</a>.</p>
-
-{% include sideimage img="listentowiki.jpg" text='Geeks do beautiful things. Like <a href="http://listen.hatnote.com/">this.</a>' %}
-
 
 </section>
 
@@ -127,7 +124,24 @@ Also I had just founded a startup and I realised that London was a terrible plac
 <p>I was part of a small indie TV & film production company in Jerusalem for two years. We made cultural reports and documentaries, and sold them mostly to Scandinavian broadcasters (apparently not much happens up there). Our proudest moment was winning the Audience Prize at Nyon Film Festival for <a href="http://www.7thart.com/films/In-the-Shadow-of-King-David"  >a film about archaeology and politics.</a></p>
 
 <h3>Print</h3>
+I've written for a fair amount of publications, large and small, as well as lyrics, poetry, and even a novel for kids. I write in spurts, sometimes obsessively for months at a time, and then months go by without wanting to put a single word down.
 
+</section>
+<section id='education'>
+> Everyone should learn how to programme a computer, because computers teach you how to think.
+
+That's a quote from everyone's favourite deity, Steve Jobs: but old Jobsy forget to mention one thing - if you only learn to think like a computer, then you are screwed for life.
+
+Steve Jobs made us all love computers. I wish it were anthropology or languages instead. Technology and computer-think teaches us nothing about each other, and everything about a rational, binary world that bears no relation to the world we live in. To learn coding is a useful skill today, much as running was during the Viking invasion. It could well get our kids a job, but encouraging us all to spend more time with machines and less time with each other leads to a dystopian future that I want my children to stay well away from. 
+
+I'm particularly interested in the philosophies of Paolo Freire, Sri Aurobindo's integral education and the gurulkul system of Indian arts practice.  
+
+My language-learning startup <a href="http://tonguesten.com">Tonguesten</a> was a radical attempt to allow kids to learn languages using the music videos and online videos that they consume anyway, effectively leading towards a DIY text book, personalised for each student according to their tastes.
+
+ It was a wild ride while it lasted, and it left me with a deep respect for computational linguistics, and a deep distaste for UK educational policy and the cynicism with which technology business try to exploit the ringfenced funding within the education sector. Sadly for the educational technology scene, proving that your app actually helps kids to learn takes a long study conducted under clinical conditions, and investors would rather you got something out there to make a quick return, so noone really bothers. And while the UK government continues to promote shiny, new technologies like magpies on heat, the real effect of technology on our kids' education becomes a moot point.
+
+ In reality, education technology is marketed as a budget-saver, and the we all know that teachers themselves are the most expensive part of any school. So, much like the CEOs of Silicon Valley, I'll send my own children to Steiner, Waldorf or Krishnamurthy schools, where class sizes are small, kids get a lot of personal attention, and the school is smart enough to leave the shiny gadgets for computer class, once or twice a week, and no more. 
+  </section>
 {% comment %}
 
 <!--   <p>To use Tufte CSS, copy <span class="code">tufte.css</span> and <span class="code">ETBembo-RomanLF.ttf</span> to your project directory and add the following to your HTML document's <span class="code">head</span> block:</p>
@@ -242,9 +256,7 @@ href="tufte.css"/&gt;</pre>
 <p>Please understand: this is not the One True Table. Such a style does not exist. One must craft each data table with custom care to the narrative one is telling with that specific data. So take this not as "the table style to use", but rather as "a table style to start from". From here, use principles to guide you: avoid chartjunk, optimize the data-ink ratio ("within reason", as Tufte says), and <span class="sidenote-number">"mobilize every graphical element, perhaps several times over, to show the data."</span><span class="sidenote">Page 139, The Visual Display of Quantitative Information, Edward Tufte 2001.</span> Know when to reach for more complex data presentation tools, like a custom graphic or a JavaScript charting library.</p> -->
 </section>
 
-<section>
-<h2>Writing</h2>
-<p> </p>
+
 
 <!--  <pre class="code">&lt;link rel="stylesheet"
 href="tufte.css"/&gt;</pre>
@@ -269,7 +281,7 @@ href="tufte.css"/&gt;</pre>
 <h3>Font</h3>
 <p>In print, Tufte uses the proprietary <span class="sidenote-number">Monotype Bembo</span><span class="sidenote">See Tufte's response in the <a href="http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0000Vt">Tufte book fonts</a> thread.</span> font. In digital formats he uses ETBembo, which Tufte CSS includes using <span class="code">@font-face</span>. This means you'll have to make the .ttf file available to your readers. Note that <a href="https://github.com/daveliepmann/tufte-css/commit/0a810a7d5f4707941c6f9fe99a53ec41f50a5c00">thanks to Linjie Ding</a>, italicized text uses the ETBembo Italic font instead of mechanically skewing the characters.</p>
 <p>Code snippets (using the <span class="code">code</span> class) ape GitHub's font selection and sans-serifs (with the <span class="sans">sans</span> class) follow Tufte's choice of Gill Sans.</p> -->
-</section>
+
 
 
 
@@ -310,10 +322,5 @@ all_the_things[i].useTufteStyle();
 </pre>
 </section> -->
 
-<section>
-<h2>Songs</h2>
-<iframe width="70%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/218640&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLPJ56FSR6VBFNzpWBetbM_hYiA71Kxg29" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen ></iframe>
-</section>
 
 
