new post - sringara

--- a/about.html
+++ b/about.html
@@ -131,6 +131,7 @@ I've written for a fair amount of <a href="/writing.html">publications</a>, larg
 </p>
 
 </section>
+<h3>Education</h3>
 <section id='education'>
 
 <blockquote>Everyone should learn how to programme a computer, because computers teach you how to think.</blockquote>
