major update, inc music CV and couple more blog entries

--- a/_posts/music/2015-10-10-lyrics.html
+++ b/_posts/music/2015-10-10-lyrics.html
@@ -1,6 +1,6 @@
 ---
 layout: music
-category: "songs"
+category: "music"
 year: 2000-
 title: "Song Lyrics, Poetry and Creative Writing"
 description: "Selected poems, stories and song lyrics"
