--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@ weight: "DE"
   <figcaption>Condensed milk label, by Ariadne Arendt</figcaption>
 </figure>
 
-<h1>Jonathan Walton</h1>
-<subtitle>aka Lemez Lovas</subtitle> 
+<h1>Lemez Lovas</h1>
+<!-- <subtitle>aka Lemez Lovas</subtitle>  -->
 {% include sideimage img="LL.jpg" %}
 
 {% assign thissite = site.posts | where: "title", "Let's Make A Website" %}
