--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ header : Hello
  {% assign reviews = site.posts | where: "title", "World music reviews, guides and sleeve notes" %} 
 
 
-<h1 class='homepage clear'> Hello. I'm <a class='indexlink' href="/about.html">Jonathan</a>. Thanks for dropping by.</h1>  
+<h1 class='homepage clear'> Hello. I'm <a class='indexlink' href="/about.html">Lemez</a>. Thanks for dropping by.</h1>  
 <h2 class='indexpage'> 
 The <a class='indexlink' href="/music.html">music</a> page has music and art projects; the <a class='indexlink' href="/writing.html">media</a> page has broadcasting, print and other scribbles;  the <a class='indexlink' href="/blog.html">blog</a>, <a class='indexlink' href="/tech.html">tech</a> and <a href="{{lyrics[0].url}}">creative writing</a> pages have... you get the picture.</h2>
 <h2 class='indexpage'> If you want to search by <a class='indexlink' href="/world.html">location</a> or <a class='indexlink' href="/categories.html">topic</a>, you can do that too.</h2>
