--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ header : Hello
 <h2 class='indexpage'> 
 The <a class='indexlink' href="/music.html">music</a> page has music and art projects; the <a class='indexlink' href="/writing.html">media</a> page has broadcasting, print and other scribbles;  the <a class='indexlink' href="/blog.html">blog</a>, <a class='indexlink' href="/tech.html">tech</a> and <a href="{{lyrics[0].url}}">creative writing</a> pages have... you get the picture.</h2>
 <h2 class='indexpage'> If you want to search by <a class='indexlink' href="/world.html">location</a> or <a class='indexlink' href="/categories.html">topic</a>, you can do that too.</h2>
-<h2 class='indexpage'>If you like what you see, please use the <a href="/subscribe.html">subscribe</a> link at the bottom. </h2> 
+<!-- <h2 class='indexpage'>If you like what you see, please use the <a href="/subscribe.html">subscribe</a> link at the bottom. </h2> 
 <h2 class='indexpage'>And if you don't want to browse at all, you can watch my YouTube favourites below - same idea: more succinct. </h2>
 <br>
 <br>
 {% include videoplaylistfull url="LLRQVtG1GPjsa0YHOmGyiiqQ" %}
 <br>
-<br>  
+<br>   -->
 
 <!-- or if you just want to jump right into the good stuff, start here. just want to watch a good film, or listen to something, go right ahead. -->
