email contact, add contact to nav, LL to L
udpated email contact to lu2

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ weight: "DE"
   <figcaption>Condensed milk label, by Ariadne Arendt</figcaption>
 </figure>
 
-<h1>Lemez Lovas</h1>
+<h1>Lemez</h1>
 <!-- <subtitle>aka Lemez Lovas</subtitle>  -->
 {% include sideimage img="LL.jpg" %}
 
