--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ header : Hello
 The <a class='indexlink' href="/music.html">music</a> page has music and art projects; the <a class='indexlink' href="/writing.html">media</a> page has broadcasting, print and other scribbles;  the <a class='indexlink' href="/blog.html">blog</a>, <a class='indexlink' href="/tech.html">tech</a> and <a href="{{lyrics[0].url}}">creative writing</a> pages have... you get the picture.</h2>
 <h2 class='indexpage'> If you want to search by <a class='indexlink' href="/world.html">location</a> or <a class='indexlink' href="/categories.html">topic</a>, you can do that too.</h2>
 
-<h2 class='indexpage'> If you want to contact me, it's <a class='indexlink' href="/world.html">lemez9@gmail.com</a>.</h2>
+<h2 class='indexpage'> If you have any ideas or questions, please <a class='indexlink' href="/contact.html">say hi</a>.</h2>
 <!-- <h2 class='indexpage'>If you like what you see, please use the <a href="/subscribe.html">subscribe</a> link at the bottom. </h2> 
 <h2 class='indexpage'>And if you don't want to browse at all, you can watch my YouTube favourites below - same idea: more succinct. </h2>
 <br>
